--- a/links.html
+++ b/links.html
@@ -21,8 +21,8 @@
         <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer">
             <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter" class="hover-effect">
         </a>
-        <a href="#" onclick="openModal(event, 'stakenow')" aria-label="Stake Now">
-            <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us" class="hover-effect">
+        <a href="#" onclick="openModal(event, 'stakenow')" aria-label="Delegate Now">
+            <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool" class="hover-effect">
         </a>
     </div>
 </div>
