--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
     <!-- Favicon and Manifest -->
-    <link rel="icon" href="favicon.png" type="image/png">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png" >
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon31x31.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon180x180.png">
     <link rel="manifest" href="manifest.json">
 
     <!-- Canonical URL (SEO best practice) -->
