--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
     <link rel="canonical" href="https://www.thedutchstakepool.com">
 
     <!-- Page Title -->
-    <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
+    <title>The Dutch Stake Pool</title>
 
     <!-- Preload Logo -->
     <link rel="preload" href="tdsp_logo.webp" as="image">
