--- a/index.html
+++ b/index.html
@@ -54,23 +54,57 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
     <script nonce="<?= $GLOBALS['csp_nonce'] ?>" src="index.js" defer></script>
 </head>
 <body>
-    <main class="container" id="main-content">
-    <h1>The Dutch Stake Pool</h1>
-    <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" loading="lazy">
-    
-    <p>The one-stop shop for staking and node operations.</p>
+    <header class="site-header" id="site-header">
+        <div class="header-inner container">
+            <a class="brand" href="/">
+                <img src="tdsp_logo.webp" alt="The Dutch Stake Pool" loading="lazy">
+                <span>The Dutch Stake Pool</span>
+            </a>
+            <nav class="nav">
+                <a href="#links" class="nav-link">Links</a>
+                <a href="#prices" class="nav-link">Prices</a>
+                <a href="#about" class="nav-link">About</a>
+            </nav>
+        </div>
+    </header>
 
-    <div id="links-container"></div>
-    <script nonce="<?= $GLOBALS['csp_nonce'] ?>" src="links-loader.js" defer></script>
-    
-    <div class="prices">
-        <p><strong>ADA:</strong> <span id="ada-price">Loading...</span> | <strong>IAG:</strong> <span id="iag-price">Loading...</span> | <strong>STRCH:</strong> <span id="strch-price">Loading...</span><br>
-        Price powered by <a href="https://www.coingecko.com" target="_blank" rel="noopener noreferrer" aria-label="Coingecko">Coingecko</a> and <a href="https://www.geckoterminal.com" target="_blank" rel="noopener noreferrer" aria-label="Geckoterminal">Geckoterminal</a>
-        </p>
-    </div>
-    <footer>
-        &copy; 2025 The Dutch Stake Pool. All rights reserved.
-    </footer>
+    <main id="main-content">
+        <section class="section hero" id="hero" aria-label="Hero">
+            <div class="container">
+                <h1>The Dutch Stake Pool</h1>
+                <p class="lead">Reliable bare-metal, low-fee stake pool for Cardano staking.</p>
+                <img class="hero-logo" src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo" loading="lazy">
+            </div>
+        </section>
+
+        <section class="section" id="links" aria-label="Links">
+            <div class="container">
+                <h2>Useful Links</h2>
+                <div id="links-container" class="link-grid" aria-live="polite"></div>
+            </div>
+            <script nonce="<?= $GLOBALS['csp_nonce'] ?>" src="links-loader.js" defer></script>
+        </section>
+
+        <section class="section" id="prices" aria-label="Prices">
+            <div class="container">
+                <h2>Prices</h2>
+                <p class="small-text"><strong>ADA:</strong> <span id="ada-price">Loading...</span> | <strong>IAG:</strong> <span id="iag-price">Loading...</span> | <strong>STRCH:</strong> <span id="strch-price">Loading...</span></p>
+                <p class="small-text">Price data from <a href="https://www.coingecko.com" target="_blank" rel="noopener noreferrer">CoinGecko</a> and <a href="https://www.geckoterminal.com" target="_blank" rel="noopener noreferrer">GeckoTerminal</a>.</p>
+            </div>
+        </section>
+
+        <section class="section" id="about" aria-label="About">
+            <div class="container">
+                <h2>About</h2>
+                <p>We run secure, reliable staking infrastructure and provide transparent information for delegators.</p>
+            </div>
+        </section>
+
+        <footer class="site-footer">
+            <div class="container">
+                &copy; 2025 The Dutch Stake Pool. All rights reserved.
+            </div>
+        </footer>
     </main>
 </body>
 </html>
